# aries-uniffi-wrappers

./: .gitignore  DEVELOP.md  Package.swift  README.md  build-kotlin-libraries.sh  build-swift-framework.sh
.github/: settings.yml
Sources/Anoncreds/: anoncreds_uniffi.swift
Sources/Askar/: askar_uniffi.swift
Sources/IndyVdr/: indy_vdr_uniffi.swift
Tests/AnoncredsTests/: Demo.swift
Tests/AskarTests/: CryptoTests.swift
Tests/IndyVdrTests/: BasicTests.swift
anoncreds/: Cargo.toml  build-kmpp-library.sh  build-kotlin-library.sh  build-swift-framework.sh  build.rs
anoncreds/kotlin/: build.gradle.kts
anoncreds/kotlin/src/commonTest/kotlin/: TestAnoncreds.kt
anoncreds/kotlin/src/nativeInterop/cinterop/: uniffi.def
anoncreds/src/: lib.rs
anoncreds/src/uffi/: credential_conversions.rs  error.rs  issuer.rs  mod.rs  prover.rs  types.rs  verifier.rs
anoncreds/uniffi/: anoncreds_uniffi.udl
askar/: Cargo.toml  build-kotlin-library.sh  build-swift-framework.sh
askar/kotlin/: build.gradle.kts  settings.gradle.kts
askar/kotlin/src/commonTest/kotlin/: TestAskar.kt
askar/kotlin/src/nativeInterop/cinterop/: uniffi.def
askar/src/: lib.rs
askar/src/uffi/: crypto.rs  entry.rs  error.rs  key.rs  mod.rs  scan.rs  session.rs  store.rs  tags.rs
askar/uniffi/: askar.udl
indy-vdr/: Cargo.toml  build-kotlin-library.sh  build-swift-framework.sh  build.rs
indy-vdr/kotlin/: build.gradle.kts
indy-vdr/kotlin/src/commonTest/kotlin/: TestVDR.kt
indy-vdr/kotlin/src/nativeInterop/cinterop/: uniffi.def
indy-vdr/src/: lib.rs
indy-vdr/src/uffi/: error.rs  ledger.rs  macros.rs  mod.rs  pool.rs  requests.rs
indy-vdr/uniffi/: indy_vdr_uniffi.udl
kotlin/anoncreds/: build.gradle.kts  settings.gradle.kts
kotlin/anoncreds/src/commonTest/kotlin/: TestAnoncreds.kt
kotlin/anoncreds/src/nativeInterop/cinterop/: uniffi.def
kotlin/askar/: .gitignore  build.gradle.kts
kotlin/askar/src/androidTest/: AndroidManifest.xml
kotlin/askar/src/androidTest/kotlin/: getDBDirectory.kt
kotlin/askar/src/commonTest/kotlin/: TestAskar.kt  getDBDirectory.kt
kotlin/askar/src/nativeInterop/cinterop/: uniffi.def
kotlin/askar/src/nativeTest/kotlin/: getDBDirectory.kt
kotlin/indy-vdr/: build.gradle.kts  gradle.properties  settings.gradle.kts
kotlin/indy-vdr/src/androidTest/: AndroidManifest.xml
kotlin/indy-vdr/src/commonTest/kotlin/: TestVDR.kt  genesis_bcovrin.kt
kotlin/indy-vdr/src/nativeInterop/cinterop/: uniffi.def
swift/Sources/Anoncreds/: anoncreds_uniffi.swift
swift/Sources/Askar/: askar_uniffi.swift
swift/Sources/IndyVdr/: indy_vdr_uniffi.swift
swift/Tests/AskarTests/: JoseEcdhTests.swift  KeyTests.swift  StoreTests.swift
swift/Tests/IndyVdrTests/: BasicTests.swift
