[package]
name = "anoncreds-uniffi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi/uniffi-bindgen.rs"

[lib]
name = "anoncreds_uniffi"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]

[build-dependencies]
uniffi = { version = "0.25.2", features = ["build", "cli"] }

[dependencies]
anoncreds = { git = "https://github.com/hyperledger/anoncreds-rs", tag = "v0.2.0", features = ["logger", "zeroize", "vendored", "w3c"], default-features = false }
anoncreds-clsignatures = "0.3.2"
env_logger = { version = "0.9" }
serde = { version = "1.0.155", features = ["derive"] }
serde_json = { version = "1.0.94", features = ["raw_value"] }
thiserror = "1.0"
uniffi = { version = "0.25.2", features = ["cli"] }
