[package]
name = "indy-vdr-uniffi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi/uniffi-bindgen.rs"

[lib]
name = "indy_vdr_uniffi"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]

[build-dependencies]
uniffi = { version = "0.25.2", features = ["build", "cli", "tokio"] }

[dependencies]
env_logger = { version = "0.9" }
indy-vdr = { git = "https://github.com/conanoc/indy-vdr", tag = "v0.4.0.2", features = ["logger"], default-features = false }
once_cell = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.32", features = ["sync"] }
uniffi = { version = "0.25.2", features = ["cli", "tokio"] }
